[project]
name = "sense-roll"
version = "0.1.0"
description = "API Key Rotation Proxy for token.sensenova.cn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.8.0",
]
