[project]
name = "sense-roll"
description = "API Key Rotation Proxy for token.sensenova.cn"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.8.0",
]

[project.scripts]
sense-roll = "sense_roll.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["sense_roll"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
